--- a/stats.html
+++ b/stats.html
@@ -173,13 +173,13 @@
     // === 🔧 CONFIGURATION SECTION (Update these) ===
 
     // ✏️ Your schedule CSV URL (Google Sheets or other public CSV)
-    const scheduleCsvUrl = 'PASTE_YOUR_SCHEDULE_CSV_URL_HERE';
+    const scheduleCsvUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vS8C7lF2di96kDuBcIgR_ogq7fQIfQKHHTRt5GAdrGs4HkIN-aZjiREVyR9hVgsdI1X5pgT46z3Ke7W/pubhtml';
 
     // ✏️ Your roster CSV URL
-    const rosterCsvUrl = 'PASTE_YOUR_ROSTER_CSV_URL_HERE';
+    const rosterCsvUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQ40qmYO9oxodCmwibwckWDyJTHSZgozyPQEtrj8wCajZ83vtDc40Yk_BHMAGnk7c5xYAiRkGs95b3k/pubhtml';
 
     // ✏️ Your Cloudflare Worker URL to fetch karma data
-    const WORKER_URL = 'PASTE_YOUR_WORKER_URL_HERE';
+    const WORKER_URL = 'https://nka-scores.tiltedtowers1975.workers.dev/';
 
     // === 🔁 Functional logic follows (No need to change) ===
 
