--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <body>
 
   <!-- ✏️ Customize your main heading -->
-  <h1>Welcome to NKAE Central</h1>
+  <h1>Welcome to NKA Central</h1>
 
   <!-- ✏️ Update this description to fit your league -->
   <p>Your hub for live scores, team stats, and player performance in THE National Karma Association.</p>
