--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
   <!-- ✏️ Replace with your name, handle, or league branding -->
   <footer>
-    &copy; YOUR NAME or LEAGUE TAG
+    &copy; National Karma Association, website owned by @bello
   </footer>
 
 </body>
