--- a/scores.html
+++ b/scores.html
@@ -127,10 +127,10 @@
     // === 🔧 CONFIGURATION SECTION (Update these) ===
 
     // ✏️ Link to your Google Sheets CSV for the schedule
-    const scheduleCsvUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vS8C7lF2di96kDuBcIgR_ogq7fQIfQKHHTRt5GAdrGs4HkIN-aZjiREVyR9hVgsdI1X5pgT46z3Ke7W/pubhtml';
+    const scheduleCsvUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vS8C7lF2di96kDuBcIgR_ogq7fQIfQKHHTRt5GAdrGs4HkIN-aZjiREVyR9hVgsdI1X5pgT46z3Ke7W/pub?output=csv';
 
     // ✏️ Link to your Google Sheets CSV for rosters
-    const rosterCsvUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQ40qmYO9oxodCmwibwckWDyJTHSZgozyPQEtrj8wCajZ83vtDc40Yk_BHMAGnk7c5xYAiRkGs95b3k/pubhtml';
+    const rosterCsvUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQ40qmYO9oxodCmwibwckWDyJTHSZgozyPQEtrj8wCajZ83vtDc40Yk_BHMAGnk7c5xYAiRkGs95b3k/pub?output=csv';
 
     // ✏️ Your Cloudflare Worker or proxy URL that fetches user karma
     const WORKER_URL = 'https://nka-scores.tiltedtowers1975.workers.dev/';
